my-portfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portfolio
  labels:
    app: my-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-portfolio
  template:
    metadata:
      labels:
        app: my-portfolio
    spec:
      imagePullSecrets:  # mandatory
      - name: regsecret
      containers:
      - name: my-portfolio
        image: saurabhkr952/my-portfolio:"0.1.0"
        imagePullPolicy: Always  # mandatory
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-portfolio
spec:
  selector:
    app: my-portfolio
  ports:
    - protocol: TCP
      port: 31000
      targetPort: 80
