todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      imagePullSecrets:  # mandatory
      - name: regsecret
      containers:
      - name: todo-app
        image: saurabhkr952/my-app:todo-app
        imagePullPolicy: Always   # mandatory
        ports:
        - containerPort: 8001     

---

apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: ClusterIP
  selector: 
    app: todo-app
  ports:
    - protocol: TCP
      port: 32000
      targetPort: 8001
